# DOC

./: .dockerignore  .env  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Makefile  Pipfile  README.md  config.py  docker-compose-prod.yml  docker-compose.api-docx-test.yml  docker-compose.api-test.yml  docker-compose.frontend-test.yml  docker-compose.override.yml  docker-compose.yml  document.py  document_assembler.py  document_generator.py  entrypoint.sh  export_md_to_pdf.py  file_utils.py  flask_app.py  language_codes.json  logging_config.yaml  mypy.ini  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  resource.py  resource_json_lookup.py  resource_lookup.py  resource_utils.py  run.sh  run_flask.sh  setup.cfg  template.docx  template_compact.docx  (+6 more)
.github/workflows/: develop-deploy.yml  docker-publish.yml  test-build.yml
backend/: logging_config.yaml  requirements-dev.in  requirements-dev.txt  requirements-prod.in  requirements-prod.txt  requirements.in  requirements.txt  setup.py
backend/document/: __init__.py  config.py
backend/document/domain/: __init__.py  assembly_strategies.py  bible_books.py  celeryconfig.py  document_generator.py  exceptions.py  model.py  parsing.py  resource_lookup.py  worker.py
backend/document/entrypoints/: app.py
backend/document/markdown_extensions/: link_print_transformer_preprocessor.py  link_regexes.py  link_transformer_preprocessor.py  remove_section_preprocessor.py
backend/document/utils/: __init__.py  file_utils.py  html_parsing_utils.py  number_utils.py  tw_utils.py
backend/templates/html/: cover.html  email.html  header_compact_enclosing.html  header_enclosing.html  header_enclosing_landscape.html  header_no_css_enclosing.html
depends/: requirements.txt
design_notes/: 1WA_Diagram.html  2WA_Web_Svc_Layer_Diagram.html  3WA_Lower_Level_Diagram.html  4WA_JSON_Diagram.html  design.html  design.org
docs/: design.html  design.org  design_v1.html
frontend/: .dockerignore  .env  .env.production  .eslintrc.cjs  .prettierrc  .prettierrc.cjs  Dockerfile  envvars.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tailwind.config.cjs  testsDockerfile  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.svelte  app.html  envvars.js.txt  main.ts  routes.js  types.d.ts
frontend/src/__tests__/: form.spec.ts  input.spec.ts  select.spec.ts  step.spec.ts
frontend/src/components/: About.svelte  AssemblyStrategy.svelte  BackButton.svelte  Books.svelte  DesktopBookDisplay.svelte  DesktopBreadcrumb.svelte  DesktopLanguageDisplay.svelte  DownloadButton.svelte  Form.svelte  GenerateDocument.svelte  Hamburger.svelte  Home.svelte  Input.svelte  LanguageSearchAndButtons.svelte  Languages.svelte  LeftArrow.svelte  LoadingIndicator.svelte  Logo.svelte  Mast.svelte  MobileBookDisplay.svelte  MobileBreadcrumb.svelte  MobileLanguageDisplay.svelte  Modal.svelte  Navbar.svelte  NextButton.svelte  ProgressIndicator.svelte  ResourceTypes.svelte  Result.svelte  Select.svelte  Settings.svelte  Sidebar.svelte  Step.svelte  Switch.svelte  Tabs.svelte  TaskStatus.svelte  Utils.ts  ViewNotFound.svelte  WizardBasket.svelte  WizardBasketModal.svelte  WizardBreadcrumb.svelte
frontend/src/data/: gl_languages.ts
frontend/src/lib/: AssemblyStrategy.svelte  BackButton.svelte  DesktopBreadcrumb.svelte  MobileBreadcrumb.svelte  Modal.svelte  ProgressIndicator.svelte  WizardBasket.svelte  WizardBreadcrumb.svelte  bible-books.ts  nt-books.ts  requests.ts  types.d.ts  utils.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/stores/: BooksStore.ts  LanguagesStore.ts  NotificationStore.ts  (+3 more)
general_tools/: file_utils.py  resource_json_lookup.py  url_utils.py
nginx/: Dockerfile  default.conf
src/: setup.py
src/document/: __init__.py  config.py  logging_config.yaml
tests/: conftest.py  pytest.ini  test_document_generator.py  test_resource_lookup.py
tests/e2e/: api_client.py  conftest.py  test_anchor_linking.py  test_api.py  test_api_assembly_strategy_combinations.py  test_api_assembly_strategy_combinations_book_then_lang.py  test_api_assembly_strategy_combinations_book_then_lang_by_chapter.py  test_api_assembly_strategy_combinations_book_then_lang_by_verse.py  test_api_assembly_strategy_combinations_lang_then_book.py  test_api_assembly_strategy_combinations_lang_then_book_by_chapter.py  test_api_assembly_strategy_combinations_lang_then_book_by_chapter_docx.py  test_api_assembly_strategy_combinations_lang_then_book_by_verse.py  test_api_english_combinatoric.py  test_api_expected_failing.py  test_api_nonrandomized_combinatoric.py  test_api_randomized_combinatoric.py  test_biel_helper.py  test_send_email.py  test_stream_pdf.py
tests/e2e_long_running/: README.md  test_api_english_long_running.py
tests/shared/: utils.py
tests/unit/: test_biel_helper_resource_json_lookup.py  test_document_generator.py  test_markdown_extensions.py  test_resource_lookup.py  test_resource_lookup_api.py  test_resource_lookup_misc_jsonpath.py  test_resource_lookup_misc_jsonpath.txt
tex/: format.tex  template.tex
tn/: .pylintrc  export_md_to_pdf.py  resource_json_lookup.py
unused_uw_code/general_tools/: pandoc_pdf_template.tex
uwb/bible/: pdf_export.Dockerfile  pdf_export.docker.bat  pdf_export.docker_entrypoint.sh
web/: Dockerfile  default.conf
working/output/: .keepme
working/temp/: keepme.txt
(+1949 files in other folders)
