[metadata]
name = document
version = 0.0.1
author = Example Author
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://github.com/pypa/sampleproject
# project_urls =
#     Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[tool:pytest]
minversion = 6.0
# addopts = -ra -q
testpaths =
    tests


[flake8]
max-line-length = 120
ignore =
  C812,
  D104,
  D107,
  D202,
  D205,
  D400,
  D401,
  DAR101,
  DAR201,
  DAR301,
  E266,
  E800,
  P101,
  Q000,
  W503,
  WPS110,
  WPS117,
  WPS226,
  WPS306,
  WPS433,
  WPS519,
  WPS600

# [isort]
# profile = "black"
# multi_line_output = 3
