[metadata]
name = document
version = 0.0.1
author = Example Author
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://github.com/pypa/sampleproject
# project_urls =
#     Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = backend
packages = find:
python_requires = >=3.8

[options.packages.find]
where = backend

[tool:pytest]
minversion = 6.0
# addopts = -ra -q
testpaths =
    tests


[flake8]
max-line-length = 120
ignore =
  C812,
  D104,
  D107,
  D202,
  D205,
  D400,
  D401,
  DAR101,
  DAR201,
  DAR301,
  E266,
  E501,
  E800,
  H601,
  I001,
  I004,
  P101,
  P103,
  Q000,
  W503,
  WPS110,
  WPS117,
  WPS118,
  WPS201,
  WPS202,
  WPS210,
  WPS219,
  WPS226,
  WPS306,
  WPS323,
  WPS337,
  WPS433,
  WPS519,
  WPS529,
  WPS600

# [isort]
# profile = "black"
# multi_line_output = 3
